# az-voice

./: .gitignore  README.md  pyproject.toml  run_voxcpm.sh
examples/: text_preprocess.py  tts_api_example.py  tts_basic.py  voxcpm2_usage_example.py
experiments/: voxcpm2_inference.py  voxcpm2_samples.py
models/: README.md
src/az_voice/: __init__.py  asr.py  text_utils.py  tts.py
src/az_voice/asr/: __init__.py
src/az_voice/server/: tts_server.py
src/az_voice/server/webui/: app.js  index.html  stream-processor.js  style.css
src/az_voice/tts/: __init__.py  voxcpm2.py
src/az_voice/utils/: __init__.py  audio_utils.py  text_chunker.py  text_normalizer.py  vram_utils.py
tests/: test_text_utils.py
tests/utils/: __init__.py  test_audio_utils.py  test_text_chunker.py  test_text_normalizer.py
